@@ -18,7 +18,7 @@ import net.neoforged.fml.ModContainer;
  */
 public final class ModConfigs {
     public static List<ModConfig> getModConfigs(String modId) {
-        return List.copyOf(ConfigTracker.INSTANCE.configsByMod.getOrDefault(modId, List.of()));
+        return Collections.unmodifiableList(ConfigTracker.INSTANCE.configsByMod.getOrDefault(modId, List.of()));
     }
 
     public static List<String> getConfigFileNames(String modId, ModConfig.Type type) {
